--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,263 +1,17 @@
-@import 'variables';
+@use './abstracts/variables';
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-}
-body {
-    background-color: #f4f4f4;
-    font-family: $font-content;
-}
+@use './base/base';
 
-.hero {
-    // border: 2px solid red;
-    padding: 15vh 5vw 5vh;
-    background: hsla(0, 0%, 0%, .7);
-    color: #fff;
-    height: 90vh;
-    // display: grid;
-    // place-content: center;
-    // justify-content: start;
-    position: relative;
-    isolation: isolate;
-    &::after {
-        position: absolute;
-        content: '';
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: url('https://images.unsplash.com/photo-1542831371-29b0f74f9713?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
-        background: url('../img/sergi-kabrera-2xU7rYxsTiM-unsplash.jpg');
-        background-repeat: no-repeat;
-        mix-blend-mode: overlay;
-        background-size: cover;
-        background-position: center;
-        z-index: -1;
-        @media (min-width: 820px) {
-            background: url('https://images.unsplash.com/photo-1526253038957-bce54e05968e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
-            background-attachment: fixed;
-            mix-blend-mode: darken;
-            background-size: cover;
-            background-position: center;
-        }
-    }
-    .hero-title {
-        position: relative;
-        top: 20vh;
-    }
-    h1 {
-        // margin: 1rem auto;
-        margin-bottom: 1rem;
-        color: yellow;
-        font-size: 1.8rem;
-    }
-
-    h2 {
-        font-size: 1.4rem;
-    }
-}
-
-main {
-    // border: 2px solid red;
-    background-color: hsl(0, 0%, 30%);
-    background-color: hsla(0, 0%, 5%);
-    padding: 10vh 5vw;
-    display: grid;
-    align-items: center;
-    gap: 10vh;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-
-    @media (min-width: 768px) {
-        // gap: 2rem;
-        column-gap: 5vw;
-        row-gap: 20vh;
-    }
-}
-
-.project-container {
-    // background-color: orange;
-    // border: 2px solid blue;
-    border-radius: 10px;
-    // height: 350px;
-    position: relative;
-
-    .project-item {
-        // border: 3px solid red;
-        width: 100%;
-        height: auto;
-        background: hsl(0, 0%, 10%);
-        padding: 1rem;
-        // border-bottom: 4px solid yellow;
-        // text-align: center;
-        border-radius: .25rem;
-        // box-shadow: 0 .5rem .5rem #0004;
-        // box-shadow: 0 .5rem .65rem hsla(60, 100%, 50%, .05);
-        transition: .25s;
-
-        @media (min-width: 768px) {
-            height: 60vh;
-        }
-
-        h2 {
-            text-transform: capitalize;
-            // margin-bottom: 1rem;
-            color: yellow;
-            margin: 1rem 0;
-            font-size: 1.25rem;
-            font-size: clamp(1.25rem, 2vw, 1.25rem);
-            // text-decoration: underline 2px solid yellow;
-        }
-
-        a {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin: 1rem 0;
-            background: #000;
-            background: linear-gradient(0deg, #000, #222);
-            box-shadow: 0 .5rem .85rem hsla(56, 100%, 50%, .05);
-            width: 11rem;
-            color: #ffff;
-            padding: .65rem 1rem;
-            text-transform: capitalize;
-            text-decoration: none;
-            border-radius: .25rem;
-            transition: .25s;
-            font-size: 1rem;
-
-            i {
-                color: yellow;
-                transition: .25s;
-            }
-
-            &:hover {
-                transform: scale(.98);
-                box-shadow: 0 .25rem .45rem hsla(56, 100%, 50%, .25);
-                i {
-                    transform: translateX(-.25rem);
-                    color: hsl(60, 100%, 40%);
-                }
-            }
-        }
-
-        figure {
-            // border: 2px solid yellow;
-            height: 0;
-            height: 50vh;
-            transition: .5s;
-            position: relative;
-            // overflow: hidden;
-            &::before {
-                content: '';
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                background: yellow;
-                opacity: 0;
-                border-radius: .25rem;
-                transition: .5s;
-            }
-            img {
-                // border: 1px solid hsl(56, 100%, 80%);
-                width: 100%;
-                // height: 200px;
-                height: 100%;
-                object-fit: contain;
-                object-fit: cover;
-                border-radius: .25rem;
-                transition: .5s;
-                transform: rotate(-10deg) scale(.8);
-                box-shadow: 0rem 1rem 1rem hsla(60, 100%, 50%, .2);
-                box-shadow: 0rem 1rem 1rem hsla(0, 0%, 0%, .5);
-                @media (min-width: 768px) {
-                    // object-fit: cover;
-                    // width: 100%;
-                    // height: 60%;
-                    // object-position: top;
-                box-shadow: 0rem .5rem 1rem hsla(0, 0%, 0%, .3);
-                }
-            }
-            @media (min-width: 768px){
-                    height: 30vh;
-                    img {
-                        transform: rotate(0);
-                    }
-            }
-        }
-
-        &:hover {
-            background: hsl(0, 0%, 20%);
-            figure {
-                // height: 50vh;
-                &::before {opacity: 0;}
-                img {
-                    transform: rotate(0deg) scale(.95);
-                    box-shadow: 0rem .5rem .25rem hsla(60, 100%, 50%, .3);
-                    box-shadow: 0rem .5rem .25rem hsla(0, 0, 0, .3);
-                }
-
-            }
-            @media (min-width: 768px){
-                figure {
-                    height: 30vh;
-                    height: 40vh;
-                    img {
-                        // transform: rotate(0deg) scale(1.15);
-                    box-shadow: 0rem .5rem .5rem hsla(60, 100%, 50%, .15);
-                    }
-                }
-            }
-        }
-    }
-}
-
-footer {
-    padding: 5vh 0;
-    font-size: 1.5rem;
-    color: #fff;
-    background-color: #000;
-    font-weight: 400;
-    text-transform: capitalize;
-    text-align: center;
-
-    a {
-        color: #fff000;
-        text-decoration: none;
-    }
-
-    @media (max-width: 768px) {
-        font-size: 1rem;
-    }
-}
+@use './layout/hero';
+@use './layout/main';
+@use './layout/projects';
 
 
-.loader_bg {
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    background: #000;
-    z-index: 99;
-    display: grid;
-    place-items: center;
 
-    .loader {
-        width: 4rem;
-        height: 4rem;
-        border-radius: 50%;
-        border: .2rem solid #111;
-        border-top: .2rem solid #fff000;
-        position: relative;
-        animation: rotate 1.5s linear infinite;
 
-        @keyframes rotate {
-            100% {
-                transform: rotate(360deg);
-            }
-        }
-    }
-}
+
+
+
+
+
+
