--- a/css/style.css
+++ b/css/style.css
@@ -1,79 +1,98 @@
-@import url("https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+html {
   scroll-behavior: smooth;
 }
 
 body {
-  background-color: #f4f4f4;
   font-family: "Montserrat", sans-serif;
+  background-color: #111;
+  color: #fff;
 }
 
 .hero {
   padding: 15vh 5vw 5vh;
-  background: rgba(0, 0, 0, 0.7);
-  color: #fff;
   height: 90vh;
   position: relative;
   isolation: isolate;
 }
-.hero::after {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: url("https://images.unsplash.com/photo-1542831371-29b0f74f9713?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
-  background: url("../img/sergi-kabrera-2xU7rYxsTiM-unsplash.jpg");
-  background-repeat: no-repeat;
-  mix-blend-mode: overlay;
-  background-size: cover;
-  background-position: center;
-  z-index: -1;
-}
-@media (min-width: 820px) {
-  .hero::after {
-    background: url("https://images.unsplash.com/photo-1526253038957-bce54e05968e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
-    background-attachment: fixed;
-    mix-blend-mode: darken;
-    background-size: cover;
-    background-position: center;
-  }
-}
-.hero .hero-title {
+
+.hero-title {
   position: relative;
   top: 20vh;
+  text-transform: capitalize;
 }
-.hero h1 {
+.hero-title h1 {
   margin-bottom: 1rem;
   color: yellow;
-  font-size: 1.8rem;
+  font-size: 2rem;
+  font-size: clamp(1.8rem, 4vw, 2.5rem);
 }
-.hero h2 {
-  font-size: 1.4rem;
+.hero-title h2 {
+  font-size: 1.2rem;
+  font-size: clamp(1.2rem, 2vw, 1.5rem);
+  margin-bottom: 2rem;
+}
+.hero-title p {
+  color: #f4f4f4;
+  line-height: 1.6;
+  font-size: clamp(1rem, 1.25vw, 1.025rem);
+}
+.hero-title a {
+  display: block;
+  width: max-content;
+  margin: 1rem 0;
+  padding: 0.5rem 1rem;
+  background: yellow;
+  color: #000;
+  text-decoration: none;
+  font-weight: 600;
+  border-radius: 0.25rem;
+  transition: 0.125s ease;
+  box-shadow: 0.125rem 0.25rem 0.5rem #0006;
+}
+.hero-title a:hover {
+  transform: scale(0.98);
+  box-shadow: 0.125rem 0.25rem 0.25rem #000;
 }
 
 main {
-  background-color: #4d4d4d;
   background-color: #0d0d0d;
   padding: 10vh 5vw;
   display: grid;
   align-items: center;
   gap: 10vh;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 }
 @media (min-width: 768px) {
   main {
-    column-gap: 5vw;
+    gap: 2rem;
     row-gap: 20vh;
   }
 }
 
+footer {
+  padding: 5vh 0;
+  font-size: 1.125rem;
+  font-size: clamp(1rem, 1.25vw, 1.125rem);
+  color: #fff;
+  background-color: #000;
+  font-weight: 400;
+  text-transform: capitalize;
+  text-align: center;
+}
+footer a {
+  color: #fff000;
+  text-decoration: none;
+}
+
 .project-container {
+  background-color: orange;
   border-radius: 10px;
   position: relative;
 }
@@ -186,49 +205,6 @@ main {
   }
   .project-container .project-item:hover figure img {
     box-shadow: 0rem 0.5rem 0.5rem rgba(255, 255, 0, 0.15);
-  }
-}
-
-footer {
-  padding: 5vh 0;
-  font-size: 1.5rem;
-  color: #fff;
-  background-color: #000;
-  font-weight: 400;
-  text-transform: capitalize;
-  text-align: center;
-}
-footer a {
-  color: #fff000;
-  text-decoration: none;
-}
-@media (max-width: 768px) {
-  footer {
-    font-size: 1rem;
-  }
-}
-
-.loader_bg {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  background: #000;
-  z-index: 99;
-  display: grid;
-  place-items: center;
-}
-.loader_bg .loader {
-  width: 4rem;
-  height: 4rem;
-  border-radius: 50%;
-  border: 0.2rem solid #111;
-  border-top: 0.2rem solid #fff000;
-  position: relative;
-  animation: rotate 1.5s linear infinite;
-}
-@keyframes rotate {
-  100% {
-    transform: rotate(360deg);
   }
 }
 
