--- a/css/style.css
+++ b/css/style.css
@@ -65,9 +65,9 @@ main {
   background-color: #0d0d0d;
   padding: 10vh 5vw;
   display: grid;
-  align-items: center;
+  place-items: center;
   gap: 10vh;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 @media (min-width: 768px) {
   main {
@@ -87,12 +87,11 @@ footer {
   text-align: center;
 }
 footer a {
-  color: #fff000;
+  color: yellow;
   text-decoration: none;
 }
 
 .project-container {
-  background-color: orange;
   border-radius: 10px;
   position: relative;
 }
@@ -102,7 +101,9 @@ footer a {
   background: #1a1a1a;
   padding: 1rem;
   border-radius: 0.25rem;
+  box-shadow: 0 0.5rem 1rem #000;
   transition: 0.25s;
+  margin-block: auto;
 }
 @media (min-width: 768px) {
   .project-container .project-item {
@@ -146,31 +147,17 @@ footer a {
   color: #cccc00;
 }
 .project-container .project-item figure {
-  height: 0;
   height: 50vh;
   transition: 0.5s;
   position: relative;
 }
-.project-container .project-item figure::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: yellow;
-  opacity: 0;
-  border-radius: 0.25rem;
-  transition: 0.5s;
-}
 .project-container .project-item figure img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
   object-fit: cover;
   border-radius: 0.25rem;
   transition: 0.5s;
-  transform: rotate(-10deg) scale(0.8);
+  transform: rotate(-5deg) scale(0.8);
   box-shadow: 0rem 1rem 1rem rgba(255, 255, 0, 0.2);
   box-shadow: 0rem 1rem 1rem rgba(0, 0, 0, 0.5);
 }
@@ -190,22 +177,9 @@ footer a {
 .project-container .project-item:hover {
   background: #333333;
 }
-.project-container .project-item:hover figure::before {
-  opacity: 0;
-}
 .project-container .project-item:hover figure img {
   transform: rotate(0deg) scale(0.95);
-  box-shadow: 0rem 0.5rem 0.25rem rgba(255, 255, 0, 0.3);
   box-shadow: 0rem 0.5rem 0.25rem rgba(0, 0, 0, 0.3);
-}
-@media (min-width: 768px) {
-  .project-container .project-item:hover figure {
-    height: 30vh;
-    height: 40vh;
-  }
-  .project-container .project-item:hover figure img {
-    box-shadow: 0rem 0.5rem 0.5rem rgba(255, 255, 0, 0.15);
-  }
 }
 
 /*# sourceMappingURL=style.css.map */
