--- a/css/base/base.css
+++ b/css/base/base.css
@@ -18,6 +18,7 @@ body {
   font-family: "Content", serif;
   background-color: #111;
   color: #fff;
+  position: relative;
 }
 
 /*# sourceMappingURL=base.css.map */
