--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -1,4 +1,4 @@
-@use '../abstracts/variables';
+@use '../abstracts';
 
 .project-container {
     border-radius: 10px;
@@ -7,25 +7,58 @@
     .project-item {
         width: 100%;
         height: auto;
-        background: hsl(0, 0%, 10%);
+        background: hsl(0, 0%, 0%);
         padding: 1rem;
-        border-radius: .25rem;
+        border-radius: 0.25rem;
         box-shadow: 0 .5rem 1rem #000;
-        transition: .25s;
+        transition: 250ms;
         margin-block: auto;
+        isolation: isolate;
+
+        // PSEUDO BG
+        &::before, &::after {
+            content: '';
+            position: absolute;
+            inset: 0;
+            border-radius: inherit;
+            z-index: -1;
+            transition: 250ms;
+        }
+
+        &::before {
+            background: #333;
+        }
+        &::after {
+            background: yellow;
+            z-index: -2;
+        }
+
+        // ANIMATION KEYFRAMES
+        @keyframes card-hover {
+            0%, 70% , 100% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.05);
+            }
+            80% {
+                transform: scale(1.025);
+            }
+        }
 
         @media (min-width: 768px) {
             height: 60vh;
         }
 
         h2 {
-            text-transform: capitalize;
-            // margin-bottom: 1rem;
             color: yellow;
             margin: 1rem 0;
+            
+            text-transform: capitalize;
             font-size: 1.25rem;
             font-size: clamp(1.25rem, 2vw, 1.25rem);
-            // text-decoration: underline 2px solid yellow;
+            
+            transition: 250ms;
         }
 
         a {
@@ -61,7 +94,7 @@
         }
 
         figure {
-            height: 50vh;
+            height: 40vh;
             transition: .5s;
             position: relative;
             img {
@@ -70,30 +103,40 @@
                 height: 100%;
                 object-fit: cover;
                 border-radius: .25rem;
-                transition: .5s;
-                transform: rotate(-5deg) scale(.8);
-                box-shadow: 0rem 1rem 1rem hsla(60, 100%, 50%, .2);
-                box-shadow: 0rem 1rem 1rem hsla(0, 0%, 0%, .5);
-                @media (min-width: 768px) {
-                box-shadow: 0rem .5rem 1rem hsla(0, 0%, 0%, .3);
-                }
+                transition: 125ms;
+                transform: rotate(-2deg) scale(.8);
+                // box-shadow: 0rem 1rem 1rem hsla(0, 0%, 0%, .5);
+                
+                // @media (min-width: 768px) {
+                // box-shadow: 0rem .5rem 1rem hsla(0, 0%, 0%, .3);
+                // }
+
             }
+
             @media (min-width: 768px){
+                    
                     height: 30vh;
+
                     img {
                         transform: rotate(0);
                     }
             }
+
         }
 
-        &:hover {
-            background: hsl(0, 0%, 20%);
+        &:hover, &:has(a:focus) {
+            animation: card-hover 250ms;
+            &::before {opacity: 0;}
+            &::after {opacity: 1;}
+
+            h2 {
+                color: #000;
+            }
             figure {
                 img {
-                    transform: rotate(0deg) scale(.95);
-                    box-shadow: 0rem .5rem .25rem hsla(0, 0, 0, .3);
+                    transform: rotate(0deg) scale(1);
+                    box-shadow: 0rem .25rem .5rem hsla(0, 0, 0, .3);
                 }
-
             }
         }
     }
