--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -11,6 +11,7 @@ html {
 }
 body {
     font-family: 'Content', serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #111;
     color: #fff;
     position: relative;
